[package]
name = "datafusion"
version = "0.1.0"
authors = ["Andrew Lamb <andrew@nerdnetworks.org>"]
edition = "2021"
description = "Re-exports datafusion at a specific version"

[dependencies]

# Rename to workaround doctest bug
# Turn off optional datafusion features (e.g. don't get support for crypo functions or avro)
upstream = { git = "https://github.com/apache/arrow-datafusion.git", rev="5f0b61b0db9849336e2e83b23c8a45508a85fb38", default-features = false, package = "datafusion" }
workspace-hack = { path = "../workspace-hack"}
